--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-      
+    <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon">
     <title>ArtistryArc</title>
   </head>
   <body>
